syntax = "proto3";

option java_multiple_files = true;
option java_package = "generated.ds.service3";
option java_outer_classname = "Service3Impl";

package service3;

// Interface exported by the server.
service Service3 {
    rpc service3Do(RequestMessage) returns (ResponseMessage) {}
    
}

message RequestMessage {
  string ProductNumber = 1;  
}

message ResponseMessage {
    string ProductNumber = 1;
    int32 price = 2;
}


